FUTBOL BRASIL: Programación de Menú, parámetros totales de prediction

--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/prediction.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/prediction.html
@@ -29,7 +29,7 @@
                         <thead>
                         <tr>
                           <th colspan="3">
-                            <span ng-bind="fixture.date"></span>
+                            <span ng-bind="getDate(fixture.date)"></span>
                           </th>
                         </tr>
                         </thead>
@@ -39,7 +39,7 @@
 
                             <td style="width: 33% !important;"
                                 class= "bet"
-                                ng-click="setBet(league.id_competitions, match.id_game_matches, 0, $parent.$parent.$index,$parent.$index,$index)"
+                                ng-click="setBet(league.id_competitions, match.id_game_matches, match.status.id_status,  0, $parent.$parent.$index,$parent.$index,$index)"
                                 ng-class="{active: match.bet.client_bet == 0}">
 
                               <span ng-bind="match.home_team.name"></span>
@@ -50,18 +50,21 @@
 
                             <td style="width: 33% !important;"
                                 class = "bet"
-                                ng-click="setBet(league.id_competitions, match.id_game_matches, 1, $parent.$parent.$index,$parent.$index,$index)"
+                                ng-click="setBet(league.id_competitions, match.id_game_matches, match.status.id_status, 1, $parent.$parent.$index, $parent.$index, $index)"
                                 ng-class="{active: match.bet.client_bet == 1}">
 
                               <span class="date" style="font-weight:bold; font-size:2em;">VS</span>
                               <br />
                               <span ng-bind="getTime(match.date)" class="date"></span>
+                              <br />
+                              <span ng-bind="match.status.name"  class="status _{{match.status.id_status}}">
+                              </span>
 
                             </td>
 
                             <td style="width: 33% !important;"
                                 class = "bet"
-                                ng-click="setBet(league.id_competitions, match.id_game_matches, 2, $parent.$parent.$index,$parent.$index,$index)"
+                                ng-click="setBet(league.id_competitions, match.id_game_matches, match.status.id_status,  2, $parent.$parent.$index,$parent.$index,$index)"
                                 ng-class="{active: match.bet.client_bet == 2}">
 
                               <span ng-bind="match.away_team.name"></span>
@@ -86,11 +89,11 @@
 
           </div> <!--container-->
 
-          <div id="bet_content_{{$index}}" class="bet-content">
-            <span style="font-size:1.6em;">{{item.leagues[$index].bet.bets}}</span> /
-            <span style="font-size:2em;">{{item.leagues[$index].bet.matches}}</span>
+          <div class="bet-content">
+            <span style="font-size:1.6em;">{{item.leagues[$index].client_bets}}</span> /
+            <span style="font-size:2em;">{{item.leagues[$index].total_bets}}</span>
             <br />
-            <a ng-click="saveBet()" class="btn btn-primary">Salvar</a>
+            <a ng-click="saveBet($index, league.id_competitions)" class="btn btn-primary">Salvar</a>
           </div>
 
         </li>
