--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/news.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/news.html
@@ -39,5 +39,13 @@
                 </div>
             </div>
         </div>
+
+        <div class="row-back" ng-click="prevPage()">
+          <div class="row" style="margin-top: 10px !important;">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="text-align: right;" >
+              <i class="icon mdi-social-share" style="font-size: 1.8em; margin-right: 10px;" ></i>
+            </div>
+          </div>
+        </div>
     </div>
 </div>
