--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/match.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/match.html
@@ -1,15 +1,25 @@
 
 <div id="wrapperH">
-    <div id="scroller" ng-style="getTotalWidth()">
+    <div id="scroller" style="width:{{widthTotal}}px;">
         <ul>
-            <li ng-style="getWidth()" ng-repeat="page in pages" on-last-repeat >
+            <li style="width:{{width}}px;" ng-repeat="page in pages" on-last-repeat >
 
                 <div class="container">
 
                     <div class="row header">
-                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" >
+
+                        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 tabs" style="text-align:left;">
+                          <span ng-bind="pages[$index-1].name"></span>
+                        </div>
+
+                        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" >
                             <h4 ng-bind="page.name" class="caption"></h4>
                         </div>
+
+                        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 tabs" style="text-align:right;" >
+                          <span ng-bind="pages[$index+1].name"></span>
+                        </div>
+
                     </div>
 
                     <div class="row" >
