--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/prediction.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/prediction.html
@@ -8,9 +8,20 @@
           <div class="container">
 
             <div class="row header">
-              <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" >
+
+              <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 tabs" style="text-align:left;">
+                <span ng-bind="item.leagues[$index-1].name"></span>
+              </div>
+
+              <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" >
                 <h4 ng-bind="league.name" class="caption"></h4>
               </div>
+
+              <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 tabs" style="text-align:right;" >
+                <span ng-bind="item.leagues[$index+1].name"></span>
+              </div>
+
+
             </div>
 
 
