--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/scorers.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/scorers.html
@@ -1,19 +1,30 @@
 <div class="row">
     <div id="wrapperH">
-        <div id="scroller" ng-style="getTotalWidth()">
+        <div id="scroller" style="width:{{widthTotal}}px;">
             <ul>
-                <li ng-style="getWidth()" ng-repeat="league in _this.item.leagues" >
+                <li style="width:{{width}}px;" ng-repeat="league in item.leagues" >
                     <div class="container">
 
                         <div class="row header">
-                            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" >
-                                <h4 ng-bind="league.name" class="caption"></h4>
-                            </div>
+
+
+                          <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 tabs" style="text-align:left;">
+                            <span ng-bind="item.leagues[$index-1].name"></span>
+                          </div>
+
+                          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" >
+                            <h4 ng-bind="league.name" class="caption"></h4>
+                          </div>
+
+                          <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 tabs" style="text-align:right;" >
+                            <span ng-bind="item.leagues[$index+1].name"></span>
+                          </div>
+
                         </div>
 
 
                         <div class="row">
-                            <div id="{{_this.wrapper.getName($index)}}" class="wrapper" >
+                            <div id="{{wrapper.getName($index)}}" class="wrapper" >
                                 <div class="scroller" >
                                     <div class="container">
 
