FUTBOL BRASIL: Fechas en Portugues, Convertir el texto a formato que soporte el view (\n)

--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/match.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/match.html
@@ -13,7 +13,7 @@
                         </div>
 
                         <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" >
-                            <h4 ng-bind="page.name" class="caption"></h4>
+                            <span ng-bind="page.name"></span>
                         </div>
 
                         <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 tabs" style="text-align:right;" >
