FUTBOL BRASIL: on, emit loading indicator

--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/scorers.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/scorers.html
@@ -2,7 +2,7 @@
     <div id="wrapperH">
         <div id="scroller" style="width:{{widthTotal}}px;">
             <ul>
-                <li style="width:{{width}}px;" ng-repeat="league in item.leagues" >
+                <li style="width:{{width}}px;" ng-repeat="league in item.leagues" on-last-repeat>
                     <div class="container">
 
                         <div class="row header">
