--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/standings.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/standings.html
@@ -4,8 +4,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 competition"
-                         ng-repeat="competition in _this.item.competitions"
-                         ng-click="_this.showContentPhases(competition)"
+                         ng-repeat="competition in item.competitions"
+                         ng-click="showContentPhases(competition)"
                          data-news="{{ competition.id_competitions }}">
                         <h4>{{competition.name}}</h4>
                     </div>
@@ -26,8 +26,8 @@
 
                 <div class="row">
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12"
-                         ng-repeat="phase in _this.item.phases"
-                         ng-click="_this.showContentRanking(_this.item.competition.id_competitions
+                         ng-repeat="phase in item.phases"
+                         ng-click="showContentRanking(item.competition.id_competitions
                             , phase.id_phases)">
                         <h4 ng-bind="phase.global_name"></h4>
                     </div>
@@ -39,7 +39,7 @@
         <div class="row-back border" ng-click="prevPage()">
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                    <span ng-bind="_this.item.competition.name"
+                    <span ng-bind="item.competition.name"
                           style="font-size: 2em; margin-left: 10px; font-weight: bold; vertical-align: baseline;"></span>
                 </div>
             </div>
@@ -59,8 +59,8 @@
                     </div>
                 </div>
 
-                <div ng-if="_this.item.tree == true ">
-                    <div class="row" ng-repeat="rankings in _this.item.ranking">
+                <div ng-if="item.tree == true ">
+                    <div class="row" ng-repeat="rankings in item.ranking">
 
                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12"
                              ng-repeat="ranking in rankings.ranking">
@@ -68,7 +68,7 @@
                                 <thead>
                                 <tr>
                                     <th colspan="8" style="background-color: #3B9444;">
-                                        <span>{{_this.fromNow(ranking.date)}}</span>
+                                        <span>{{fromNow(ranking.date)}}</span>
                                     </th>
                                 </tr>
                                 </thead>
@@ -97,8 +97,8 @@
                     </div>
                 </div>
 
-                <div ng-if="_this.item.tree == false ">
-                    <div class="row" ng-repeat="rankings in _this.item.ranking">
+                <div ng-if="item.tree == false ">
+                    <div class="row" ng-repeat="rankings in item.ranking">
 
                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 
@@ -167,7 +167,7 @@
         <div class="row-back border" ng-click="prevPage()">
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                    <span ng-bind="_this.item.phase.competition.name"
+                    <span ng-bind="item.phase.competition.name"
                           style="font-size: 2em; margin-left: 10px; font-weight: bold;"></span>
                 </div>
             </div>
@@ -176,7 +176,7 @@
         <div class="row-back" style="top:50px !important; background-color: #FAFAFA;">
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="text-align: center;">
-                    <span ng-bind="_this.item.phase.global_name"
+                    <span ng-bind="item.phase.global_name"
                           style="font-size: 1.6em; font-weight: bold;"></span>
                 </div>
             </div>
