--- a/FutbolBrasil/futbol-brasil/app/styles/default.css
+++ b/FutbolBrasil/futbol-brasil/app/styles/default.css
@@ -43,16 +43,6 @@ row:not(input):not(textarea) {
 		width: 100%;
 	}
 
-	/*#wrapper2,
-	#wrapper3 {
-		position: absolute;
-		z-index: 3;
-		top: 0px;
-		bottom: 0;
-		left: 0;
-		width: 100%;
-	}*/
-
 	header, footer {
 		position: absolute;
 		z-index: 2;
@@ -459,4 +449,35 @@ body.content-mtm .row-back {
     .col-lg-15 {
         width: 20%;
     }
+}
+
+.search-bar{
+    position: absolute;
+    z-index: 2;
+    background-color: #FFF;
+    margin: 0;
+    padding: 12px;
+    font-size: 20px;
+}
+
+.team-info{
+    display: inline-block;
+}
+
+.team-logo{
+    /*display: inline-block;*/
+}
+
+.btn-delete-item {
+    background-color: #f44336 !important;
+    border-radius: 100%;
+    font-size: 12px;
+    padding: 6px;
+    width: 24px;
+    height: 24px;
+    vertical-align: middle;
+    line-height: 10px;
+    position: absolute;
+    top: -12px;
+    right: 16px;
 }
